<resources>
    <string name="app_name">TO-DO</string>

    <!--    to do add button-->
    <string name="addButton">ADD TODO</string>

    <string name="login_title"> Log In Manager</string>
    <string name="reg_title"> Registration Manager</string>

    <string name="email">Enter Your Email</string>
    <string name="passsword">Enter Your Password</string>

    <string name="login_button">LogIn</string>
    <string name="reg_button">Registration</string>
    <string name="goto_reg_page">Register Now</string>
    <string name="goto_login_page">login Now</string>

</resources>