<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"

    android:background="@drawable/background"
    tools:context=".Register">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_title"
        android:textAllCaps="true"
        android:background="@drawable/input_file"
        android:layout_gravity="center"
        android:gravity="center"
        style="@style/title_show"/>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:gravity="center">
       <EditText
           android:id="@+id/regEmailId"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@drawable/input_file"
           android:hint="@string/email"
           style="@style/editText_show"/>

       <EditText
           android:id="@+id/regPassId"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@drawable/input_file"
           android:hint="@string/passsword"
           style="@style/editText_show"/>

       <Button
           android:id="@+id/regBtnId"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
           android:text="@string/reg_button"
           android:textSize="20sp"
           android:textStyle="bold"
           android:padding="5dp"
           android:textAllCaps="false"
           android:background="@drawable/input_file"
           android:backgroundTint="#D88484"/>

       <TextView
           android:id="@+id/goToLogInpage"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="18sp"
           android:textColor="@color/white"
           android:padding="10dp"
           android:layout_gravity="right"
           android:text="@string/goto_login_page"/>
   </LinearLayout>


</LinearLayout>