<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:padding="5dp"
    tools:context=".LogIn">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textAllCaps="true"
        android:background="@drawable/input_file"
        android:layout_gravity="center"
        android:gravity="center"
        style="@style/title_show"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <EditText
            android:id="@+id/logInEmailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@drawable/input_file"
            android:hint="@string/email"
            style="@style/editText_show"/>

        <EditText
            android:id="@+id/logInPassId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_file"
            android:hint="@string/passsword"
            android:textColor="@color/black"
            style="@style/editText_show"/>

        <Button
            android:id="@+id/logInBtnId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SAVE"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/teal_200"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/goToRegPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:padding="10dp"
            android:layout_gravity="right"
            android:text="@string/goto_reg_page"/>
    </LinearLayout>


</LinearLayout>